Replace convoluted method chain with Files.readString()